@@ -75,9 +75,11 @@
 	- rpmal: avoid rpmns allocates while iterating added provides.
 	- rpmns: finalize '!' as a dependency assertion negation operator.
 	- rpmns: add macro()/envvar() probes as existence tests.
-	- rollback: add REMOVETOID subdir to insure unbroken upgrade chain.
+	- rollback: add REMOVETID subdir to insure unbroken upgrade chain.
 	- rpmns: add running() probe with scwewy unexpected non-root behavior.
 	- solaris: rpmds.c rearrangements to build against solaris gelf API.
+	- rollback: add link terminator to all upgrade chains.
+	- rollback: assertion checks for all header additions.
 
 4.4.7 -> 4.4.8:
 	- start rpm-4.4.8 development.
